<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ASK</string>

    <string name="tab_power">Ask</string>
    <string name="tab_alarm">Alarms</string>
    <string name="tab_chosen_music">Music</string>
    <string name="tab_all_music">Storage</string>
    <string name="tab_commands">Commands</string>

    <string name="error">Error</string>
    <string name="error_recognition_unavailable">Unfortunately, voice recognition is not possible on your device.</string>

    <string name="sleep_notification_title">ASK is in sleep mode…</string>
    <string name="sleep_notification_text">Say \"ASK, wake up!\" to switch to listening mode</string>
    <string name="listening_notification_title">ASK is in listening mode…</string>
    <string name="listening_notification_text">Say \"ASK, sleep!\" to switch to sleeping mode</string>

    <string-array name="keywords_name" tools:ignore="InconsistentArrays">
        <item>ask</item>
    </string-array>

    <string-array name="keywords_wake_up" tools:ignore="InconsistentArrays">
        <item>wake up</item>
    </string-array>
    <string-array name="keywords_sleep" tools:ignore="InconsistentArrays">
        <item>sleep</item>
    </string-array>

    <string-array name="keywords_on" tools:ignore="InconsistentArrays">
        <item>on</item>
    </string-array>
    <string-array name="keywords_off" tools:ignore="InconsistentArrays">
        <item>off</item>
        <item>cancel</item>
    </string-array>

    <string-array name="keywords_mute" tools:ignore="InconsistentArrays">
        <item>mute</item>
        <item>silent</item>
        <item>silence</item>
    </string-array>
    <string-array name="keywords_unmute" tools:ignore="InconsistentArrays">
        <item>unmute</item>
        <item>speak</item>
        <item>say</item>
        <item>talk</item>
    </string-array>

    <string-array name="keywords_volume" tools:ignore="InconsistentArrays">
        <item>volume</item>
        <item>level</item>
        <item>loudness</item>
        <item>sound</item>
        <item>make</item>
    </string-array>
    <string-array name="keywords_max" tools:ignore="InconsistentArrays">
        <item>maximum</item>
        <item>high</item>
    </string-array>
    <string-array name="keywords_middle" tools:ignore="InconsistentArrays">
        <item>average</item>
        <item>medium</item>
        <item>middle</item>
        <item>half</item>
    </string-array>
    <string-array name="keywords_min" tools:ignore="InconsistentArrays">
        <item>minimum</item>
        <item>low</item>
    </string-array>
    <string-array name="keywords_quieter" tools:ignore="InconsistentArrays">
        <item>quieter</item>
        <item>lower</item>
    </string-array>
    <string-array name="keywords_loudly" tools:ignore="InconsistentArrays">
        <item>loudly</item>
        <item>higher</item>
    </string-array>

    <string-array name="keywords_reply" tools:ignore="InconsistentArrays">
        <item>reply</item>
        <item>respond</item>
        <item>check</item>
        <item>test</item>
    </string-array>

    <string-array name="keywords_alarm" tools:ignore="InconsistentArrays">
        <item>alarm</item>
        <item>clock</item>
    </string-array>

    <string-array name="keywords_timer" tools:ignore="InconsistentArrays">
        <item>timer</item>
        <item>countdown</item>
    </string-array>

    <string-array name="keywords_play" tools:ignore="InconsistentArrays">
        <item>music</item>
        <item>play</item>
        <item>song</item>
        <item>continue</item>
    </string-array>
    <string-array name="keywords_pause" tools:ignore="InconsistentArrays">
        <item>pause</item>
    </string-array>
    <string-array name="keywords_stop" tools:ignore="InconsistentArrays">
        <item>stop</item>
    </string-array>
    <string-array name="keywords_seek" tools:ignore="InconsistentArrays">
        <item>seek</item>
        <item>rewind</item>
    </string-array>
    <string-array name="keywords_beginning" tools:ignore="InconsistentArrays">
        <item>beginning</item>
    </string-array>

</resources>